<resources>
    <string name="app_name">宇医医生</string>

    <string name="information_tv">资讯</string>
    <string name="academic_circle_tv">学术圈</string>
    <string name="patient_tv">患者</string>
    <string name="my_tv">个人</string>

    <string name="today_tv">今日推荐</string>
    <string name="new_tv">最新</string>
    <string name="hot_tv">热门</string>
    <string name="select_tv">精选</string>
    <string name="title">清华大学成立临床医学院,这是在放啥信号?</string>
    <string name="message">2016年12月29日,清华大学医学院在其官网站发布通知:医教研三位一体，清华大学在医学院成立临床</string>
    <string name="comment_hint_edit">写评论</string>


    <string name="str_li">李四</string>
    <string name="str_user_edi">个人编辑</string>
    <string name="str_save">保存</string>
    <string name="str_head">头像</string>
    <string name="str_user_name">用户名</string>
    <string name="str_user_num">18328887653</string>
    <string name="str_user_sex">性别</string>
    <string name="str_user_boy">男</string>
    <string name="str_user_girl">女</string>
    <string name="str_user_age">年龄</string>
    <string name="str_user_nation">民族</string>
    <string name="str_user_bu">布依族</string>
    <string name="str_user_id">身份证号码</string>
    <string name="str_user_id_num">13238829983839280100</string>
    <string name="str_user_place">籍贯</string>
    <string name="str_user_place_mess">河南省新乡市</string>

    <string name="information_mess">资讯详情</string>
    <string name="comment">评论</string>
    <string name="comment_hint">说点什么吧...</string>
    <string name="comment_send">发送</string>
    <string name="post_tv">发布</string>
    <string name="post_title">标题(不超过20个字)</string>
    <string name="post_content">输入内容</string>
    <string name="add_img">添加图片</string>

    <string name="patient_mess_tv">患者详情</string>
    <string name="patient_ele_tv">电子病历</string>
    <string name="patient_messdata_tv">患者数据</string>
    <string name="patient_blood_tv">血压</string>
    <string name="patient_tem_tv">体温</string>
    <string name="str_userheightpress">收缩压(高压)</string>
    <string name="str_userlowpress">舒张压(低压)</string>
    <string name="tv_mess7">&#8194;&#8194;&#8194;&#8194;收缩压在120~139毫米汞柱和舒张压在80~89毫米汞柱，是从理想血压到确诊高血压的过渡阶段。
    据统计临界高血压5年死亡率较血压正常值高2倍。对于临界高血压首先应用非药物疗法。除了上面介绍的措施外，还可以理疗、针灸，可收到良好的效果。</string>

    <string name="str_now_tem">当前体温</string>
    <string name="tv_mess1">正常人体温一般为36~37°C</string>
    <string name="tv_mess2">发烧分为:</string>
    <string name="tv_mess3">低热: 37.5~38°C</string>
    <string name="tv_mess4">中等度热: 28.1~39°C</string>
    <string name="tv_mess5">高热: 39.1~41°C</string>
    <string name="tv_mess6">超高热: 41°以上</string>
    <string name="now_hostory">现病史</string>
    <string name="no_patient_msg">无患者信息<font color="#00bfff">点击刷新</font></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_settings_aboutOurs_msg">宇医app，希望通过网上医疗的形式能够解决用户的一些医疗的基本需求，包括：测量监控自己及家人的健康数据；足不出户解决购药问题；提前预约专家挂号问题；在家与医生面对面交流，解决一些简单的问诊等</string>
    <string name="my_settings_aboutOurs_versionCode">当前版本号：1.0（wanyu2017）</string>
    <string name="my_settings_contactOur_phoneNum">0312-3850331</string>
    <string name="my_message_notifi_title">更新通知：你已经好久没看我了，最近我有很多好玩的新功能哦，快来更新吧～</string>
    <string name="forumposts_title">还有九天发一些知识点--需要死记硬背的（当年考试做的一点总结，希望能对大家有所帮助）</string>
    <string name="forumposts_content">呼吸系统：1、呼酸呼碱 代酸代碱：第一步看CO2变化，反映呼吸，CO2高了呼酸，CO2低了呼碱；第二部看HCO3根（正常值为22～27，平均值为24），反映呼吸装状况良好，多注意呼吸道是否感染</string>
</resources>
