<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_scroll_bg"
    tools:context="com.doctor.yuyi.activity.UserInfo_Activity">

    <View
        android:id="@+id/curr_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/user_title"
        android:background="@color/color_bg" />
    <RelativeLayout
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/editor_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/user_editor_textV_submit"
            android:onClick="Submit"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:background="@drawable/user_editor_submit"
            android:text="@string/str_save"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/str_user_edi"
            android:textColor="@color/color_normal"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/par_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/curr_line">
        <RelativeLayout
            android:clickable="true"
            android:id="@+id/select_head"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_white">


            <com.doctor.yuyi.myview.RoundImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/usereditor_image_userphoto"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:src="@mipmap/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:text="@string/str_head"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_name_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/user_nikname_rl"
            android:layout_marginTop="1dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/str_user_name"
                android:textColor="@color/color_normal"
                android:textSize="14sp"
                android:id="@+id/textView5" />

            <EditText
                android:hint="用户名"
                android:background="@null"
                android:id="@+id/user_editor_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:gravity="right|center_vertical"
                android:text="@string/str_user_num"
                android:textColor="@color/color_press"
                android:textSize="13sp"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_age_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_sex_rl"
            android:layout_marginTop="1dp"
            android:background="@color/color_white">

            <TextView
                android:id="@+id/age_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/str_user_age"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/age_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:maxLength="3"
                android:gravity="right|center_vertical"
                android:layout_toEndOf="@id/age_tv"
                android:inputType="number"
                android:paddingEnd="20dp"
                android:hint="输入年龄"
                android:text="26"
                android:textColor="@color/color_press"
                android:textSize="13sp" />
        </RelativeLayout>


        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/user_place_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_white"
            android:layout_below="@+id/user_id_rl"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/gj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/str_user_place"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jg_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/gj"
                android:background="@null"
                android:inputType="text"
                android:gravity="end"
                android:maxLines="1"
                android:paddingEnd="20dp"
                android:text="山西大同"
                android:hint="输入籍贯"
                android:textColor="@color/color_press"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1dp"
            android:id="@+id/user_id_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_white"
            android:layout_below="@+id/user_age_rl"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tv_id_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/str_user_id"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ad_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:gravity="right|center_vertical"
                android:maxLength="18"
                android:maxLines="1"
                android:paddingEnd="20dp"
                android:text="123456789012345678"
                android:hint="身份证号"
                android:textColor="@color/color_press"
                android:textSize="13sp"
                android:layout_alignBaseline="@+id/tv_id_name"
                android:layout_alignBottom="@+id/tv_id_name"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1dp"
            android:id="@+id/user_sex_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_white"
            android:layout_below="@+id/user_name_rl"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/str_user_sex"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:text="@string/str_user_boy"
                android:id="@+id/user_editor_sex"
                android:textColor="@color/color_press"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:id="@+id/user_nikname_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_white"
            android:layout_below="@+id/select_head"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/nikname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="昵称"
                android:textColor="@color/color_normal"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/nikname_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:inputType="text"
                android:hint="输入昵称"
                android:maxLength="15"
                android:paddingRight="20dp"
                android:text="@string/str_li"
                android:textColor="@color/color_press"
                android:textSize="13sp"
                android:layout_alignBaseline="@+id/nikname_tv"
                android:layout_alignBottom="@+id/nikname_tv"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>
