<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doctor.yuyi.activity.MainActivity">


    <LinearLayout
        android:id="@+id/all_ll_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_fragment_btn"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_edit_hint" />

        <LinearLayout
            android:id="@+id/firstpage_btn_ll_all"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/information_btn_ll"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/information_btn_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/information_selected" />

                <TextView
                    android:id="@+id/information_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/information_tv"
                    android:textColor="@color/color_press_tv" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/academic_btn_ll"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/academic_btn_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/academiccircles" />

                <TextView
                    android:id="@+id/macademic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/academic_circle_tv"
                    android:textColor="@color/color_press" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/patient_btn_ll"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/patient_btn_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/patient" />

                <TextView
                    android:id="@+id/patient_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/patient_tv"
                    android:textColor="@color/color_press" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_btn_ll"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/my_btn_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my" />

                <TextView
                    android:id="@+id/my_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/my_tv"
                    android:textColor="@color/color_press" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/all_ll_btn">

    </RelativeLayout>
</RelativeLayout>
