<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="fragment.InformationFragment">

    <RelativeLayout
        android:id="@+id/equip_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/recommend_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/today_tv"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/today_tv"
                    android:textColor="@color/navigate_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View

                    android:id="@+id/today_line"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center"
                    android:background="@color/navigate_tv_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/new_tv"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/new_tv"
                    android:textColor="@color/navigate_color"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/new_line"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center"
                    android:background="@color/navigate_tv_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hot_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hot_tv"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/hot_tv"
                    android:textColor="@color/navigate_color"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/hot_line"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center"
                    android:background="@color/navigate_tv_color" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/equip_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/equip_title"
        android:background="@color/color_cancel" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/first_page_swiperefesh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/equip_line"
        android:focusable="false">

        <ListView
            android:id="@+id/information_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/viewpager_relative"
            android:background="@color/color_white"
            android:divider="@null">

        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <!--没有数据页面-->
    <RelativeLayout
        android:id="@+id/nodata_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/equip_line"
        android:background="@color/color_white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/nothings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_img"
            android:layout_centerHorizontal="true"
            android:text="数据走丢了"
            android:textColor="@color/color_dd"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
