<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="fragment.AcademicFragment">

    <RelativeLayout
        android:id="@+id/change_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <RelativeLayout
            android:id="@+id/today_relative"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/circle_hot_tv"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:gravity="center"
                android:text="@string/hot_tv"
                android:textColor="@color/navigate_tv_color"
                android:textSize="17sp" />

            <View
                android:id="@+id/circle_hot_line"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_below="@id/circle_hot_tv"
                android:background="@color/navigate_tv_color" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/new_relative"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/today_relative"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/circle_select_tv"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:gravity="center"
                android:text="@string/select_tv"
                android:textColor="@color/color_drumall"
                android:textSize="17sp" />

            <View
                android:id="@+id/circle_select_line"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_below="@id/circle_select_tv"
                android:background="@color/navigate_tv_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/new_relative"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/circle_new_tv"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:gravity="center"
                android:text="@string/new_tv"
                android:textColor="@color/color_drumall"
                android:textSize="17sp" />

            <View

                android:id="@+id/circle_new_line"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_below="@id/circle_new_tv"
                android:background="@color/navigate_tv_color" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/information_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/informt" />
    </RelativeLayout>

    <View
        android:id="@+id/equip_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/change_btn"
        android:background="@color/color_cancel" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/circle_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/equip_line">


        <ListView
            android:id="@+id/circle_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white"
            android:divider="@color/color_cancel"
            android:dividerHeight="10dp"
            android:scrollbars="none">

        </ListView>


    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/post_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/postamessage" />

    <!--没有数据页面-->
    <RelativeLayout
        android:id="@+id/nodata_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/equip_line"
        android:background="@color/color_white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/nothings" />

        <TextView
            android:id="@+id/no_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_img"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textColor="@color/color_dd"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/no_post_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/postamessage"
            android:visibility="gone" />
    </RelativeLayout>


</RelativeLayout>
